--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -5,7 +5,10 @@
 </ul> -->
 
 <div class="row">
-  <div class="col-md-4 col-sm-6" *ngFor="let gif of resultados">
+  <div 
+    class="col-md-4 col-sm-6 animate__animated animate__fadeIn animate__faster" 
+    *ngFor="let gif of resultados"
+  >
     <div class="card m-2">
       <img 
         [src]="gif.images.downsized_medium.url" 
